Tweaks for readability

--- a/performance-analysis/performance-analysis.ipynb
+++ b/performance-analysis/performance-analysis.ipynb
@@ -153,29 +153,24 @@
     "        return frame\n",
     "\n",
     "    def _consolidate_compute_data(self, codebase: str, frame: DataFrame) -> DataFrame:\n",
-    "\n",
     "        data: DataFrame = pandas.concat([data_set.read_frame(p, codebase) for p in glob('*.top.csv') if path.exists(p)])\n",
-    "        data['VIRT'] = data['VIRT'].transform(DataSet._memory_unit_to_gib)\n",
+    "        data['VIRT'] = data['VIRT'].transform(DataSet._parse_memory_storage_unit)\n",
     "        data = self._add_column_period(data)\n",
-    "\n",
     "        return data if frame is None else frame.append(data)\n",
     "\n",
     "    def _consolidate_network_data(self, codebase: str, frame: DataFrame) -> DataFrame:\n",
-    "\n",
     "        data: DataFrame = pandas.concat([data_set.read_frame(p, codebase) for p in glob('*.ss.csv') if path.exists(p)])\n",
     "        data = self._add_column_period(data)\n",
-    "\n",
     "        return data if frame is None else frame.append(data)\n",
     "\n",
     "    @staticmethod\n",
     "    def _consolidate_performance_data(codebase: str, frame: DataFrame) -> DataFrame:\n",
     "        paths: List[str] = [os.path.join(d, 'Latency.csv') for d in glob('*.perf')]\n",
-    "        subset: DataFrame = pandas.concat([data_set.read_frame(p, codebase) for p in paths if path.exists(p)])\n",
-    "        return subset if frame is None else frame.append(subset)\n",
+    "        data: DataFrame = pandas.concat([data_set.read_frame(p, codebase) for p in paths if path.exists(p)])\n",
+    "        return data if frame is None else frame.append(data)\n",
     "\n",
     "    @staticmethod\n",
-    "    def _memory_unit_to_gib(value: Union[str, int]) -> float:\n",
-    "\n",
+    "    def _parse_memory_storage_unit(value: Union[str, int]) -> float:\n",
     "        if type(value) is str:\n",
     "            unit: str = value[-1]\n",
     "            if unit == 'b':\n",
@@ -187,7 +182,6 @@
     "            if unit == 'g':\n",
     "                return float(value[0:-1])\n",
     "            return float(value) / (1024 * 1024 * 1024)\n",
-    "\n",
     "        return value / (1024 * 1024 * 1024)\n",
     "\n",
     "    # endregion"
